<resources>
    <string name="app_name">Movie Review</string>
    <string name="page_title">Page Title</string>
    <string name="back_title">Back title</string>
    <string name="like">Like</string>
    <string name="liked">Liked!</string>
    <string name="comment">Comment</string>
    <string name="send">Send</string>
    <string name="share">Share</string>
    <string name="title">Title</string>
    <string name="title_yor">Yor the Hunter from the future</string>
    <string name="original_title">Original title</string>
    <string name="original_tile_yor">Il mondo di Yor</string>
    <string name="description">Description</string>
    <string name="description_yor">
        "Ex his quidam aeternitati se commendari posse per statuas aestimantes eas ardenter adfectant quasi plus praemii de figmentis aereis sensu carentibus adepturi, quam ex conscientia honeste recteque factorum, easque auro curant inbracteari, quod Acilio Glabrioni delatum est primo, cum consiliis armisque regem superasset Antiochum. quam autem sit pulchrum exigua haec spernentem et minima ad ascensus verae gloriae tendere longos et arduos, ut memorat vates Ascraeus, Censorius Cato monstravit. qui interrogatus quam ob rem inter multos… statuam non haberet malo inquit ambigere bonos quam ob rem id non meruerim, quam quod est gravius cur inpetraverim mussitare.

Post haec indumentum regale quaerebatur et ministris fucandae purpurae tortis confessisque pectoralem tuniculam sine manicis textam, Maras nomine quidam inductus est ut appellant Christiani diaconus, cuius prolatae litterae scriptae Graeco sermone ad Tyrii textrini praepositum celerari speciem perurgebant quam autem non indicabant denique etiam idem ad usque discrimen vitae vexatus nihil fateri conpulsus est.

Inter haec Orfitus praefecti potestate regebat urbem aeternam ultra modum delatae dignitatis sese efferens insolenter, vir quidem prudens et forensium negotiorum oppido gnarus, sed splendore liberalium doctrinarum minus quam nobilem decuerat institutus, quo administrante seditiones sunt concitatae graves ob inopiam vini: huius avidis usibus vulgus intentum ad motus asperos excitatur et crebros.
    </string>
    <string name="key_words">Key words</string>
    <string name="key_words_yor">WORDS</string>
    <string name="comment_placeholder">Say something…</string>
    <string name="title_activity_categories">Categories</string>
    <string name="movie_list_title">Movies</string>
    <string name="list_categories">Categories</string>
    <string name="comment_content">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed varius purus ex, sodales lobortis leo scelerisque nec. Mauris quis erat nisi.</string>
</resources>
