<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".movie.MovieActivity">

    <fr.polytech.lechat.moviereview.NavView
        android:id="@+id/nav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:back_title="@string/back_title"
        app:page_title="@string/page_title">

    </fr.polytech.lechat.moviereview.NavView>

    <ScrollView
        android:layout_below="@id/nav"
        android:layout_above="@id/bottom_text"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/movie_picture"
                android:layout_width="match_parent"
                android:layout_height="295dp"
                android:scaleType="centerCrop"
                app:srcCompat="@mipmap/yor" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorPrimaryDark"
                android:stretchColumns="1">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="3dip"
                        android:paddingEnd="10dip"
                        android:paddingLeft="3dip"
                        android:paddingRight="10dip"
                        android:paddingStart="3dip"
                        android:paddingTop="3dip"
                        android:text="@string/title"
                        android:textColor="@color/less_white" />

                    <TextView
                        android:id="@+id/movie_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="3dip"
                        android:text="@string/title_yor"
                        android:textColor="@color/white" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="3dip"
                        android:paddingEnd="10dip"
                        android:paddingLeft="3dip"
                        android:paddingRight="10dip"
                        android:paddingStart="3dip"
                        android:paddingTop="3dip"
                        android:text="@string/original_title"
                        android:textColor="@color/less_white" />

                    <TextView
                        android:id="@+id/movie_original_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="3dip"
                        android:text="@string/original_tile_yor"
                        android:textColor="@color/white" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="3dip"
                        android:paddingEnd="10dip"
                        android:paddingLeft="3dip"
                        android:paddingRight="10dip"
                        android:paddingStart="3dip"
                        android:paddingTop="3dip"
                        android:text="@string/description"
                        android:textColor="@color/less_white" />

                    <TextView
                        android:id="@+id/movie_description"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:padding="3dip"
                        android:text="@string/description_yor"
                        android:textColor="@color/white" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="3dip"
                        android:paddingEnd="10dip"
                        android:paddingLeft="3dip"
                        android:paddingRight="10dip"
                        android:paddingStart="3dip"
                        android:paddingTop="3dip"
                        android:text="@string/key_words"
                        android:textColor="@color/less_white" />

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="3dip"
                        android:text="@string/key_words_yor"
                        android:textColor="@color/white" />
                </TableRow>
            </TableLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:orientation="horizontal"
                android:padding="5dp">

                <Button
                    android:id="@+id/shareBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/button"
                    android:drawableLeft="@drawable/ic_add_to_photos_black_24dp"
                    android:drawableStart="@drawable/ic_add_to_photos_black_24dp"
                    android:drawableTint="@color/white"
                    android:text="@string/share"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/commentBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/button"
                    android:drawableLeft="@drawable/ic_announcement_black_24dp"
                    android:drawableStart="@drawable/ic_announcement_black_24dp"
                    android:drawableTint="@color/white"
                    android:text="@string/comment"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/likeBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/button"
                    android:drawableLeft="@drawable/ic_thumb_up_black_24dp"
                    android:drawableStart="@drawable/ic_thumb_up_black_24dp"
                    android:drawableTint="@color/white"
                    android:text="@string/like"
                    android:textColor="@color/white" />

            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/comment_list"
                android:layout_width="match_parent"
                android:layout_height="150dp">

            </android.support.v7.widget.RecyclerView>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/bottom_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:background="@color/colorPrimary"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/commentText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/comment_placeholder"
            android:inputType="textPersonName"
            android:textColor="@color/white" />

        <ImageButton
            android:id="@+id/sendBtn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:tint="@color/colorAccent"
            app:srcCompat="@drawable/ic_chat_black_24dp" />
    </LinearLayout>

</RelativeLayout>