<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="284dp"
            android:scaleType="centerCrop"
            app:srcCompat="@mipmap/yor" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/movieName"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/likeBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableLeft="@drawable/ic_thumb_up_black_24dp"
                android:drawableStart="@drawable/ic_thumb_up_black_24dp"
                android:text="@string/like" />

            <Button
                android:id="@+id/commentBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableLeft="@drawable/ic_announcement_black_24dp"
                android:drawableStart="@drawable/ic_announcement_black_24dp"
                android:text="@string/comment" />

            <Button
                android:id="@+id/sendBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableLeft="@drawable/ic_call_made_black_24dp"
                android:drawableStart="@drawable/ic_call_made_black_24dp"
                android:text="@string/send" />

            <Button
                android:id="@+id/shareBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableLeft="@drawable/ic_add_to_photos_black_24dp"
                android:drawableStart="@drawable/ic_add_to_photos_black_24dp"
                android:text="@string/share" />
        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>