<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".categories.CategoriesActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <fr.polytech.lechat.moviereview.NavView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:back_title="@string/back_title"
            app:page_title="@string/page_title">

        </fr.polytech.lechat.moviereview.NavView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/list_cat_btn"
            android:background="@color/colorAccent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:text="@string/list_categories"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />
        </RelativeLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/movie_list_recycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </android.support.v7.widget.RecyclerView>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>